# pink-transcriber

./: .gitignore  README.md  dev.sh  install.sh  pyproject.toml  uninstall.sh
src/pink_transcriber/: __init__.py  client.py  config.py  model.py  server.py  worker.py
src/pink_transcriber/cli/: __init__.py  client.py  server.py
src/pink_transcriber/core/: __init__.py  model.py
src/pink_transcriber/daemon/: __init__.py  singleton.py  worker.py
